--- a/src/layout/pages/categories/category-card/category-card.css
+++ b/src/layout/pages/categories/category-card/category-card.css
@@ -18,7 +18,7 @@
   font-weight: 500;
   margin-bottom: auto;
   display: flex;
-  align-items: center;
+  /* align-items: center; */
 }
 
 .category-card h3 span {
@@ -26,7 +26,6 @@
   font-size: 20px;
   cursor: pointer;
   padding: 0 5px;
-  pointer-events: none;
 }
 
 .category-card .dropdown-menu {
