--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,13 @@ a {
   text-decoration: none;
   color: unset;
 }
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+  scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--background);
+  border-radius: 10px;
+}
