--- a/src/layout/pages/settings/sliderSettings/sliderSettings.css
+++ b/src/layout/pages/settings/sliderSettings/sliderSettings.css
@@ -14,6 +14,10 @@
   align-items: center;
 }
 
+.sliderSettings h3 {
+  outline: none;
+}
+
 .sliderSettings .select {
   width: 300px;
   margin-right: 10px;
