--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,11 @@
   min-height: 100vh;
 }
 
+.container.login {
+  width: 100%;
+  margin-left: 0;
+}
+
 a {
   text-decoration: none;
   color: unset;
