--- a/src/layout/pages/products/products.css
+++ b/src/layout/pages/products/products.css
@@ -24,26 +24,70 @@
 }
 .Products .table {
   width: 100%;
-  background-color: #24252f;
+  background-color: rgba(255, 255, 255, 0.13);
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 30px 0;
+  border-radius: 5px;
+  overflow: hidden;
 }
 .Products .table > div {
   display: grid;
   width: 100%;
   color: #fff;
   font-size: 16px;
-  grid-template-columns: repeat(7, 1fr);
-  padding: 10px;
+  grid-template-columns: 30% 10% 10% 10% 10% 10% 10%;
+  gap: 20px;
+  padding: 15px 15px;
+  position: relative;
+  /* background-color: #44454e; */
+  background-color: transparent;
+  box-shadow: inset 0 0 0 9999px rgba(255, 255, 255, 0.05);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.075);
 }
+
+.Products .table > div:not(.header)::after {
+  content: "";
+  border: 1px solid transparent;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  pointer-events: none;
+  transition: border 0.1s;
+}
+
+.Products .table > div:not(.header):hover::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border: 1px solid #666;
+  transition: border 0.1s;
+}
+
+.Products .table > div p:not(:first-child) {
+  text-align: center;
+}
+
+.Products .table > div p {
+  word-wrap: break-word;
+}
+
 .Products .table > div:nth-child(odd) {
-  background-color: #3a3b44;
+  box-shadow: inset 0 0 0 9999px transparent;
 }
 .Products .table .header {
   font-size: 18px;
-  background-color: #3a3b44;
+}
+.Products .table .actions {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .Products .table .actions svg {
   margin: 0 5px;
