--- a/src/layout/pages/products/products.css
+++ b/src/layout/pages/products/products.css
@@ -8,7 +8,12 @@
 .Products .top {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 95%;
+}
+.Products .filterHeading {
+  color: #fff;
+  margin: 10px 0;
+  font-weight: 500;
 }
 .Products .top button.addNew {
   all: unset;
@@ -22,7 +27,7 @@
   cursor: pointer;
   width: max-content;
   font-size: 14px;
-  margin: auto;
+  margin-left: auto;
 }
 
 .Products .top button.addNew i {
@@ -30,8 +35,8 @@
   margin-top: 3px;
 }
 .Products .top .searchDiv {
-  margin: 10px;
-  width: 50vw;
+  margin: 10px 0;
+  width: 100%;
   display: flex;
   justify-content: flex-start;
 }
@@ -39,6 +44,9 @@
   width: 200px;
   height: 50px;
   margin: 0 20px;
+}
+.Products .top .searchDiv > div:first-child {
+  margin-left: 0;
 }
 .Products .top .searchDiv > div input {
   padding-bottom: 10px;
