--- a/src/layout/pages/products/products.css
+++ b/src/layout/pages/products/products.css
@@ -38,6 +38,7 @@
   margin: 10px 0;
   width: 100%;
   display: flex;
+  align-items: center;
   justify-content: flex-start;
 }
 .Products .top .searchDiv > div {
