--- a/src/layout/pages/orders/orders.css
+++ b/src/layout/pages/orders/orders.css
@@ -7,27 +7,43 @@
 }
 .orders .table {
   width: 100%;
-  background-color: #24252f;
+  background-color: rgba(255, 255, 255, 0.13);
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 30px 0;
+  border-radius: 5px;
+  overflow: hidden;
 }
 .orders .table > div {
   width: 100%;
+  background-color: transparent;
+  box-shadow: inset 0 0 0 9999px rgba(255, 255, 255, 0.05);
+  /* border-bottom: 1px solid rgba(255, 255, 255, 0.075); */
+  margin: 0 !important;
+}
+.css-qoi9-MuiPaper-root-MuiAccordion-root.Mui-expanded:before {
+  opacity: 1;
 }
 .orders .table .order {
   width: 100%;
   display: grid;
   color: #fff;
   font-size: 16px;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: 15% 15% 25% 10% 15% 15%;
+  gap: 14px;
   justify-items: center;
   align-items: center;
-  padding: 10px;
+  padding: 0 10px;
+}
+.orders .table .css-15v22id-MuiAccordionDetails-root {
+  padding: 0 16px 16px;
+}
+.orders .table .css-o4b71y-MuiAccordionSummary-content.Mui-expanded {
+  margin: 12px 0;
 }
 .orders .table > div:nth-child(odd) {
-  background-color: #3a3b44;
+  box-shadow: inset 0 0 0 9999px transparent;
 }
 .orders .table .order div p:first-child {
   justify-self: flex-start;
@@ -35,11 +51,15 @@
 .orders .table .order p {
   margin-right: 5px;
 }
+.order > .col-p {
+  font-size: 16px !important;
+}
 .orders .col-p {
   display: flex !important;
   flex-direction: column !important;
   align-items: flex-start;
   width: 100%;
+  font-size: 14px;
 }
 .orders .col-p span {
   font-size: 12px;
@@ -63,22 +83,34 @@
   grid-template-columns: 1fr 1fr 1fr 1fr;
   align-items: center;
 }
+.orders .table h4 {
+  text-decoration: underline;
+  font-weight: 500;
+}
 .orders .table .top h4 {
   margin-bottom: 10px;
+  font-size: 15px;
+  font-weight: 500;
+  text-decoration: none;
 }
 .orders .table .orderItem {
-  margin: 10px 0;
+  /* margin: 10px 0; */
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  padding: 10px 0;
+  grid-template-columns: 40% repeat(4, 1fr);
+  gap: 10px;
+  padding: 20px 0;
   border-bottom: 1px dashed rgb(212, 211, 211);
 }
 .orders .table .orderItem p {
   margin: 0 5px;
 }
+
+.orders .table .orderItem p span {
+  margin-bottom: 3px;
+}
 .orders .table .buttons button {
   all: unset;
-  background-color: green;
+  background-color: #519668;
   padding: 5px 10px;
   border-radius: 5px;
   color: #fff;
@@ -88,5 +120,5 @@
   cursor: pointer;
 }
 .orders .table .buttons button:last-child {
-  background-color: rgb(204, 22, 22);
+  background-color: #c77171;
 }
